# OpenHack_MarkovDevs

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  validate_format.py
app/: engine.py  main.py  schemas.py  verifier.py
data/: ccpa_graph.json
data/faiss_index/: ccpa.index  mapping.json
scripts/: 02_build_graph.py  03_build_vector_db.py  04_download_model.py
